# InterpCore

./: .gitignore  README.md  pyproject.toml
.github/workflows/: AutomatedTests_linux.yml  AutomatedTests_win.yml  build_publish.yml
apdl-scripts/: export_centroids.apdl  export_nodes.apdl
doc/em_force/: destination_mesh.txt  em_force.ipynb
doc/em_force/source_data/: em_force_data.txt
doc/heat_flux/: destination_mesh.txt  heat_flux.ipynb
doc/heat_flux/source_data/: heat_flux_data.txt
doc/heat_gen/: destination_mesh.txt  heat_gen.ipynb
doc/heat_gen/source_data/: heat_gen_data.txt
doc/htc/: destination_mesh.txt  htc.ipynb
doc/htc/source_data/: htc_data.txt
src/interpcore/: config.py  dest_tree.py  errors.py  interpolator.py  kernels.py  mech_tree.py  parsers.py
tests/: test_config.py  test_interpolator.py  test_kernels.py
